compiler/tests/fixtures/invalid/semantics/plan_selector_targets_self.viv
// Invalid: plan selector targets itself

action step:
    roles:
        @doer:
            as: initiator

plan real-plan:
    roles:
        @actor:
            as: character
    phases:
        >do-it:
            queue action step:
                with partial:
                    @doer: @actor
            succeed;

plan-selector pick:
    roles:
        @actor:
            as: character
    target in order:
        selector pick;
        real-plan;
